package pt.isep.desofs.m1a.g1.model;


public enum Role {

}
